# Unseen-Codebases-Domain-Data-Synthesis-and-Training-Based-on-Code-Graphs

./: README.md  README_EN.md  requirements.txt
Evaluation/evaluation/Hexi/test_cases/: BUILD.md  CMakeLists.txt  README.md  build.sh
Evaluation/evaluation/Hexi/test_cases/include/: implementation.hpp
Evaluation/evaluation/Hexi/test_cases/tests/: tests.cpp
Evaluation/evaluation/reaction/test_cases/: BUILD.md  CMakeLists.txt  README.md  build.sh
Evaluation/evaluation/reaction/test_cases/include/: implementation.hpp  test_always_trigger.hpp  test_atomic_compound_assign.hpp  test_atomic_compound_helpers.hpp  test_atomic_operations.hpp  test_batch_execute_update.hpp  test_batch_execution.hpp  test_batch_manual_lifecycle.hpp  test_batch_operations.hpp  test_calculation_reset.hpp  test_chained_observers.hpp  test_conditional_mutex.hpp  test_conditional_shared_mutex.hpp  test_const_var_propagation.hpp  test_error_messages.hpp  test_exception_metadata.hpp  test_field_binding.hpp  test_field_graph_cleanup.hpp  test_field_unique_id.hpp  test_filter_trigger.hpp  test_generic_cache_base.hpp  test_global_state_scoped_guards.hpp  test_graph_reset_node.hpp  test_last_handle_restore.hpp  test_logical_expression_builders.hpp  test_multiple_observers.hpp  test_named_reactions.hpp  test_node_closure.hpp  test_node_metrics_cache.hpp  test_observer.hpp  test_observer_cache_stats.hpp  test_observer_collection.hpp  test_observer_depth_ordering.hpp  test_observer_naming.hpp  test_observer_node_links.hpp  test_observer_reset.hpp  test_observer_state_rollback.hpp  test_raw_expression_builders.hpp  test_react_ordering.hpp  test_react_pointer_access.hpp  (+25 more)
Evaluation/evaluation/reaction/test_cases/tests/: test_always_trigger.cpp  test_atomic_compound_assign.cpp  test_basic.cpp  (+63 more)
Evaluation/evaluation/sqlgen/test_cases/: BUILD.md  CMakeLists.txt  build.sh
Evaluation/third_party_project/Hexi/: CMakeLists.txt  LICENSE  LICENSE-MIT  README.md  compile_commands_original.json  fix_includes.py
Evaluation/third_party_project/Hexi/include/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Evaluation/third_party_project/Hexi/single_include/: hexi.h  hexi_fwd.h
Evaluation/third_party_project/Hexi/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  binary_stream.cpp  binary_stream_pmc.cpp  buffer_adaptor.cpp  buffer_adaptor_pmc.cpp  buffer_utility.cpp  cmake_install.cmake  dynamic_buffer.cpp  file_buffer.cpp  final_action.h  intrusive_storage.cpp  null_buffer.cpp  static_buffer.cpp  tls_block_allocator.cpp  unit_tests[1]_include.cmake
Evaluation/third_party_project/Hexi/tests_split/: CMakeLists.txt  binary_stream_function_implementation_0.hpp  binary_stream_new_test_case_0.cpp  binary_stream_pmc_function_implementation_0.hpp  binary_stream_pmc_function_implementation_1.hpp  binary_stream_pmc_function_implementation_10.hpp  binary_stream_pmc_function_implementation_11.hpp  binary_stream_pmc_function_implementation_12.hpp  binary_stream_pmc_function_implementation_13.hpp  binary_stream_pmc_function_implementation_14.hpp  binary_stream_pmc_function_implementation_15.hpp  binary_stream_pmc_function_implementation_16.hpp  binary_stream_pmc_function_implementation_17.hpp  binary_stream_pmc_function_implementation_18.hpp  binary_stream_pmc_function_implementation_19.hpp  binary_stream_pmc_function_implementation_2.hpp  binary_stream_pmc_function_implementation_20.hpp  binary_stream_pmc_function_implementation_21.hpp  binary_stream_pmc_function_implementation_22.hpp  binary_stream_pmc_function_implementation_23.hpp  binary_stream_pmc_function_implementation_24.hpp  binary_stream_pmc_function_implementation_25.hpp  binary_stream_pmc_function_implementation_26.hpp  binary_stream_pmc_function_implementation_27.hpp  binary_stream_pmc_function_implementation_28.hpp  binary_stream_pmc_function_implementation_29.hpp  binary_stream_pmc_function_implementation_3.hpp  binary_stream_pmc_function_implementation_30.hpp  binary_stream_pmc_function_implementation_31.hpp  binary_stream_pmc_function_implementation_4.hpp  binary_stream_pmc_function_implementation_5.hpp  binary_stream_pmc_function_implementation_6.hpp  binary_stream_pmc_function_implementation_7.hpp  binary_stream_pmc_function_implementation_8.hpp  binary_stream_pmc_function_implementation_9.hpp  binary_stream_pmc_new_test_case_0.cpp  binary_stream_pmc_new_test_case_1.cpp  binary_stream_pmc_new_test_case_10.cpp  binary_stream_pmc_new_test_case_11.cpp  binary_stream_pmc_new_test_case_12.cpp  (+214 more)
Evaluation/third_party_project/reaction/: .clang-format  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
Evaluation/third_party_project/reaction/benchmark/: CMakeLists.txt  bench_cache.cpp  bench_comparison.cpp  bench_multi_thread.cpp
Evaluation/third_party_project/reaction/cmake/: cmake_uninstall.cmake.in
Evaluation/third_party_project/reaction/example/: CMakeLists.txt  basic_example.cpp  batch_example.cpp  contain_example.cpp  exception_example.cpp  field_example.cpp  trigger_example.cpp
Evaluation/third_party_project/reaction/test/: CMakeLists.txt
Evaluation/third_party_project/sqlgen/: CMakeLists.txt  LICENSE  README.md  conanfile.py  sqlgen-config.cmake.in  vcpkg.json
Evaluation/third_party_project/sqlgen/docs/: README.md  col.md  connection_pool.md  create_as.md  create_index.md  create_table.md  defining_tables.md  delete_from.md  drop.md  dynamic.md  enum.md  exec.md  flatten.md  foreign_key.md  group_by_and_aggregations.md  insert.md  joins.md  json.md  literals.md  mathematical_operations.md  mysql.md  null_handling_operations.md  pattern.md  postgres.md  primary_key.md  reading.md  result.md  select_from.md  sqlite.md  string_operations.md  timestamp.md  timestamp_operations.md  to_sql.md  transactions.md  type_conversion_operations.md  unique.md  update.md  varchar.md  views.md  writing.md
Evaluation/third_party_project/sqlgen/include/: sqlgen.hpp
Evaluation/third_party_project/sqlgen/src/: sqlgen.cpp  sqlgen_mysql.cpp  sqlgen_postgres.cpp  sqlgen_sqlite.cpp
Evaluation/third_party_project/sqlgen/tests/: CMakeLists.txt
(+2074 files in other folders)
